--- a/gb/ncid281_5.md
+++ b/gb/ncid281_5.md
@@ -25,11 +25,11 @@
 路透社报导表示，设在北京、上海、南京和广州的考试中心已接到中共教育部的指令，将在明年暂停这些科目的考试.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月24日 2:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/6/23/n11341456.md#1" target="_blank">英语外教在中国面临困境</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/6/23/n11341456.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/c4ffdfeef384a263edbe9c5bdcd712f6-150x120.jpg" align ="left"></a>来自西雅图的美国律师丹·哈里斯发表博客文章，建议外籍教师不要去中国教英文。外教在中国生存状况是否面临困境？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月24日 1:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/6/21/n11338341.md#1" target="_blank">北京宣传“千兆之城” 网民揭通信真实现状</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/6/21/n11338341.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/GettyImages-1131489187-2-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>6月20日，“北京将成为国内首批千兆之城”的消息被陆媒热炒，并登上微博热搜榜。网民对此却并不乐观，各地民众纷纷晒出自己的通信体验和现状。专家表示，千兆宽带只是一种宣传手法，实际上无法达到。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月22日 2:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/8/13/n11449886.md#1" target="_blank">吃了一盘黑木耳 杭州男子失去意识进ICU</a><br></h3>上月底，浙江杭州40多岁的张先生被送往医院。经检查，他的肝、肾功能衰竭，有严重凝血功能障碍。医生表示，张先生是吃了隔夜的黑木耳导致的米酵酸菌中毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月13日 3:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/8/7/n11438018.md#1" target="_blank">中共下达金马禁令令人不齿 叶德娴：各行各路</a><br></h3>在稍早前发布与金马奖撞期等变相抵制金马奖的消息后，中共国家电影局8月7日直接下达禁令：“暂停大陆影片和人员参加2019年第56届台湾金马影展。”突如其来的消息令人震惊和不齿，曾荣膺金马影后的香港资深艺人叶德娴表示：“勉强没有幸福，各行各路。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月08日 6:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/7/22/n11401219.md#1" target="_blank">中共新疆白皮书被批用谎言编造历史</a><br></h3>继近期国际社会严厉批评中共新疆政策后，中共当局21日发布《新疆的若干历史问题》白皮书进行诡辩，随后遭到“世界维吾尔代表大会”炮轰。另有媒体披露，中共还删除了小学教科书中关于新疆维吾尔人等文章。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 5:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/7/15/n11386237.md#1" target="_blank">家庭投入的无底洞 北大教授批教育双轨制</a><br></h3>在近日北京大学举办的论坛上，北大教授渠敬东指出了现行教育体制的一系列问题，学生的身体健康，心理健康堪忧，而教育双轨制更成了家庭资源无限投放的无底洞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月16日 3:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/6/25/n11344314.md#1" target="_blank">非法办学 深圳一高收费幼儿园现发臭猪肉</a><br></h3>近日，深圳龙岗某幼儿园厨房被发现有发臭的猪肉。据悉，该幼儿园不仅收费高，而且系非法办学。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月25日 3:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/6/24/n11343721.md#1" target="_blank">《少年的你》上映前夕被撤档 疑涉敏感内容</a><br></h3>原定于6月27日在大陆上映的电影《少年的你》被撤档。该片今年二月曾入围柏林电节，但电影节开幕前夕却突然宣布无法参加影展。外界质疑影片有反映校园欺凌和校园暴力现象，可能因影响了中国学校的形象，所以没过审查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月25日 6:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/6/19/n11333627.md#1" target="_blank">央视大变脸 川习通话后急播《黄河绝恋》惹笑</a><br></h3>美中元首18日通电话，确认月底G20“川习会”。曾在美中贸易战升级时连播“抗美”电影的央视，今日（19日）突然改播亲美电影《黄河绝恋》。北京姿态一夜间大转变惹网民哄笑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月20日 3:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ublry267/djy/blob/master/gb/ncid281_5.md#1<br><a href="https://github.com/ublry267/djy/blob/master/gb/ncid281_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/ncid281_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid281_5.htm">http://www.epochtimes.com/gb/ncid281_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
