--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -11,7 +11,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11695755.md#1" target="_blank">沈阳市住宅高楼大火 火势凶猛 伤亡不明</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11695755.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Unknown-150x120.jpg" align ="left"></a>12月2日晚21点30分左右，沈阳市浑南区的SR国际新城住宅区发生大火，火光冲天，目前伤亡不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 11:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11693966.md#1" target="_blank">重庆在建桥体突断开倾侧 无人员伤亡</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/2/n11693966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/bkn-20191202031517432-1202_00952_001_01b-150x120.jpg" align ="left"></a>12月1日晚，重庆一在建大桥突然断开倾斜，所幸没有造成人员伤亡。事故原因和后续处置工作尚未公布。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/1/n11693420.md#1" target="_blank">广州主干道地陷深至38米 2车3人失踪</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/1/n11693420.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6b1510bagy1g9gznq3c2xj20jk0g0tf2-150x120.jpg" align ="left"></a>广州大道北与禺东西路交界处发生地面塌陷，塌方地区最深38米，两辆车陷入看不到踪影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:51 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/27/n11685479.md#1" target="_blank">内蒙再确诊鼠疫 传长春也现疫情 消息被删</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/27/n11685479.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/84364d29fb10c9a7c99b5abda166169e-150x120.jpg" align ="left"></a>北京时间11月27日夜间，中共内蒙古卫健委官网公布第4例鼠疫病例。自北京确诊2例肺鼠疫患者以来，各地防治鼠疫的宣传大张旗鼓，但一些相关案例却被禁止讨论，令外界质疑，当局有意在掩盖疫情真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 3:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/10/n11712260.md#1" target="_blank">阴霾天大陆多地航班延误 通行能力降50％</a><br></h3>12月10日，大陆多地部分机场因阴霾天气影响，能见度低，出现大面积延误情况，包括乌鲁木齐地窝堡机场、济南遥墙机场、青岛流亭机场、石家庄正定机场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/9/n11710988.md#1" target="_blank">四川绵阳4.6级地震 成都德阳震感强烈</a><br></h3>四川省绵阳市安州区9日下午发生4.6级地震。地震发生后，大量网民发帖表示有震感，“成都震感强烈”、“西科大（绵阳西南科技大学）震感强烈”“德阳震感强烈”！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/8/n11708036.md#1" target="_blank">京津冀多地持续阴霾天 航班高速路均受影响</a><br></h3>12月8日，河北南部、北京东南部、河南中东部、山东西北部等地的部分地区因重度阴霾影响，多处高速路段封闭，机场航班也被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/7/n11706911.md#1" target="_blank">遂宁小区疑似一氧化碳中毒事故 2死7住院</a><br></h3>12月8日，四川遂宁市安居区凤凰街道某小区发生一氧化碳中毒事件，导致2死、7人身体不适，已在医院救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:37 PM							</td></tr>
